# OS_ProgrammingTest_inLinux

./: README.md
CSTest/: EasySocket.hpp  TCPclient.cpp  TCPserver1.cpp  TCPserver2.cpp  concurrencyServer.cpp  multiThreadServer.cpp
ForkTry/: ForkTest  ForkTest.cpp  multiProcessTest  multiProcessTest.cpp
Fork_ExecTest/: targetText.txt  test  test.cpp
GuardProcessTest/: GuardProcTry.cpp  a
IOtest/: a.out  dict1.txt  read_write.cpp  test.cpp  test.out
KillTest/: alarmTest  alarmTest.cpp  multiProcessKill  multiProcessKill.cpp  setitimerTry  setitimerTry.cpp
MmapTry/: mmaptest_r  mmaptest_r.cpp  mmaptest_w  mmaptest_w.cpp  modernVersion_r  modernVersion_r.cpp  modernVersion_w  modernVersion_w.cpp  try
PipeTry/: pipetest  pipetest.cpp  pipetestforBro  pipetestforBro.cpp
ReaddirTest/: IsR.cpp  IsR.out  makefile  test  test.cpp
SignalSetTest/: KillSubProcess.cpp  sigactionTry  sigactionTry.cpp  signalTry  signalTry.cpp  test
StatTest/: stattest  stattest.cpp  test.txt
WaitExercise/: main  main.cpp  test1  test1.cpp  test2  test2.cpp
WaitTry/: WaitTest  WaitTest.cpp
asycTest/: a.out  asyncTry  asyncTry.cpp  promise_futureTry.cpp
networkProgrammingByAsio/: CMakeLists.txt  client.cpp  echo_Server.cpp
networkProgrammingByAsio/asyncAPI_Try/: session.cpp  session.h
networkProgrammingByAsio/serverBaseOnAsync/: main.cpp  server_v3.h  session.h  session_v3.cpp  session_version2.h
semTest/: sem_PC  sem_PC.cpp
serverBaseOnAsync/: server_v3.cpp  session.cpp  session_v3.h  session_version2.cpp
theaatingTest/: CancelThreadTry  CancelThreadTry.cpp  a.out  (+10 more)
(+13 files in other folders)
